Detect groups in AIC finder